# sheetah

./: README.md  TODO.md  pyproject.toml  test.md
src/sheetah/: __init__.py  cli.py  gui.py  guihelper  sheetah.py
tests/: test_sheetah.py
