[project]
name = "sheetah"
version = "0.1.1"
description = "A small toolkit to parse Markdown into searchable segments"
readme = "README.md"
authors = [
    { name = "Carsten Engelke", email = "carsten.engelke@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "pygubu>=0.40",
    "markdown>=3.0",
    "html2text>=2020.1.16",
    "prompt_toolkit>=3.0",
    "pyperclip>=1.8",
]

[project.scripts]
sheetah = "sheetah.cli:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
